// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BasemapManager /> should render a basic basemap manager component 1`] = `
"[36m<div>[39m
  [36m<div[39m
    [33mclass[39m=[32m\\"sc-AxjAm jCJLXK\\"[39m
    [33mid[39m=[32m\\"_ol_kit_map_test_id\\"[39m
  [36m>[39m
    [36m<div[39m
      [33mclass[39m=[32m\\"ol-viewport\\"[39m
      [33mdata-view[39m=[32m\\"1\\"[39m
      [33mstyle[39m=[32m\\"position: relative; overflow: hidden; width: 100%; height: 100%;\\"[39m
    [36m>[39m
      [36m<canvas[39m
        [33mclass[39m=[32m\\"ol-unselectable\\"[39m
        [33mstyle[39m=[32m\\"width: 100%; height: 100%; display: block;\\"[39m
      [36m/>[39m
      [36m<div[39m
        [33mclass[39m=[32m\\"ol-overlaycontainer\\"[39m
      [36m/>[39m
      [36m<div[39m
        [33mclass[39m=[32m\\"ol-overlaycontainer-stopevent\\"[39m
      [36m/>[39m
    [36m</div>[39m
  [36m</div>[39m
  [36m<div[39m
    [33mclass[39m=[32m\\"sc-AxirZ icXBkU\\"[39m
  [36m>[39m
    [36m<div[39m
      [33mclass[39m=[32m\\"sc-AxiKw cCxGZL _ol_kit_basemapOption\\"[39m
    [36m>[39m
      [36m<div[39m
        [33mclass[39m=[32m\\"sc-AxhCb jbZdWE\\"[39m
      [36m/>[39m
      [36m<label[39m
        [33mclass[39m=[32m\\"sc-AxhUy drnGGb\\"[39m
      [36m>[39m
        [0mOpenStreetMap[0m
      [36m</label>[39m
    [36m</div>[39m
    [36m<div[39m
      [33mclass[39m=[32m\\"sc-AxiKw giVZre _ol_kit_basemapOption\\"[39m
    [36m>[39m
      [36m<div[39m
        [33mclass[39m=[32m\\"sc-AxhCb lhYASk\\"[39m
      [36m/>[39m
      [36m<label[39m
        [33mclass[39m=[32m\\"sc-AxhUy drnGGb\\"[39m
      [36m>[39m
        [0mStamen Terrain[0m
      [36m</label>[39m
    [36m</div>[39m
    [36m<div[39m
      [33mclass[39m=[32m\\"sc-AxiKw giVZre _ol_kit_basemapOption\\"[39m
    [36m>[39m
      [36m<div[39m
        [33mclass[39m=[32m\\"sc-AxhCb eXxcRz\\"[39m
      [36m/>[39m
      [36m<label[39m
        [33mclass[39m=[32m\\"sc-AxhUy drnGGb\\"[39m
      [36m>[39m
        [0mStamen Toner Dark[0m
      [36m</label>[39m
    [36m</div>[39m
    [36m<div[39m
      [33mclass[39m=[32m\\"sc-AxiKw giVZre _ol_kit_basemapOption\\"[39m
    [36m>[39m
      [36m<div[39m
        [33mclass[39m=[32m\\"sc-AxhCb fAaRGN\\"[39m
      [36m/>[39m
      [36m<label[39m
        [33mclass[39m=[32m\\"sc-AxhUy drnGGb\\"[39m
      [36m>[39m
        [0mStamen Toner Lite[0m
      [36m</label>[39m
    [36m</div>[39m
    [36m<div[39m
      [33mclass[39m=[32m\\"sc-AxiKw giVZre _ol_kit_basemapOption\\"[39m
    [36m>[39m
      [36m<div[39m
        [33mclass[39m=[32m\\"sc-AxhCb cSPPXx\\"[39m
      [36m/>[39m
      [36m<label[39m
        [33mclass[39m=[32m\\"sc-AxhUy drnGGb\\"[39m
      [36m>[39m
        [0mBlank White[0m
      [36m</label>[39m
    [36m</div>[39m
  [36m</div>[39m
[36m</div>[39m"
`;

exports[`<BasemapManager /> should render a single child 1`] = `
"[36m<div>[39m
  [36m<div[39m
    [33mclass[39m=[32m\\"sc-AxjAm jCJLXK\\"[39m
    [33mid[39m=[32m\\"_ol_kit_map_test_id\\"[39m
  [36m>[39m
    [36m<div[39m
      [33mclass[39m=[32m\\"ol-viewport\\"[39m
      [33mdata-view[39m=[32m\\"19\\"[39m
      [33mstyle[39m=[32m\\"position: relative; overflow: hidden; width: 100%; height: 100%;\\"[39m
    [36m>[39m
      [36m<canvas[39m
        [33mclass[39m=[32m\\"ol-unselectable\\"[39m
        [33mstyle[39m=[32m\\"width: 100%; height: 100%; display: none;\\"[39m
      [36m/>[39m
      [36m<div[39m
        [33mclass[39m=[32m\\"ol-overlaycontainer\\"[39m
      [36m/>[39m
      [36m<div[39m
        [33mclass[39m=[32m\\"ol-overlaycontainer-stopevent\\"[39m
      [36m/>[39m
    [36m</div>[39m
  [36m</div>[39m
  [36m<div[39m
    [33mclass[39m=[32m\\"sc-AxirZ icXBkU\\"[39m
  [36m>[39m
    [36m<div[39m
      [33mclass[39m=[32m\\"sc-AxiKw cCxGZL _ol_kit_basemapOption\\"[39m
    [36m>[39m
      [36m<div[39m
        [33mclass[39m=[32m\\"sc-AxhCb jbZdWE\\"[39m
      [36m/>[39m
      [36m<label[39m
        [33mclass[39m=[32m\\"sc-AxhUy drnGGb\\"[39m
      [36m>[39m
        [0mOpenStreetMap[0m
      [36m</label>[39m
    [36m</div>[39m
    [36m<div[39m
      [33mclass[39m=[32m\\"sc-AxiKw giVZre _ol_kit_basemapOption\\"[39m
    [36m>[39m
      [36m<div[39m
        [33mclass[39m=[32m\\"sc-AxhCb lhYASk\\"[39m
      [36m/>[39m
      [36m<label[39m
        [33mclass[39m=[32m\\"sc-AxhUy drnGGb\\"[39m
      [36m>[39m
        [0mStamen Terrain[0m
      [36m</label>[39m
    [36m</div>[39m
    [36m<div[39m
      [33mclass[39m=[32m\\"sc-AxiKw giVZre _ol_kit_basemapOption\\"[39m
    [36m>[39m
      [36m<div[39m
        [33mclass[39m=[32m\\"sc-AxhCb eXxcRz\\"[39m
      [36m/>[39m
      [36m<label[39m
        [33mclass[39m=[32m\\"sc-AxhUy drnGGb\\"[39m
      [36m>[39m
        [0mStamen Toner Dark[0m
      [36m</label>[39m
    [36m</div>[39m
    [36m<div[39m
      [33mclass[39m=[32m\\"sc-AxiKw giVZre _ol_kit_basemapOption\\"[39m
    [36m>[39m
      [36m<div[39m
        [33mclass[39m=[32m\\"sc-AxhCb fAaRGN\\"[39m
      [36m/>[39m
      [36m<label[39m
        [33mclass[39m=[32m\\"sc-AxhUy drnGGb\\"[39m
      [36m>[39m
        [0mStamen Toner Lite[0m
      [36m</label>[39m
    [36m</div>[39m
    [36m<div[39m
      [33mclass[39m=[32m\\"sc-AxiKw giVZre _ol_kit_basemapOption\\"[39m
    [36m>[39m
      [36m<div[39m
        [33mclass[39m=[32m\\"sc-AxhCb cSPPXx\\"[39m
      [36m/>[39m
      [36m<label[39m
        [33mclass[39m=[32m\\"sc-AxhUy drnGGb\\"[39m
      [36m>[39m
        [0mBlank White[0m
      [36m</label>[39m
    [36m</div>[39m
    [36m<div[39m
      [33mid[39m=[32m\\"child comp\\"[39m
    [36m>[39m
      [0mchild comp[0m
    [36m</div>[39m
  [36m</div>[39m
[36m</div>[39m"
`;

exports[`<BasemapManager /> should render an array of children 1`] = `
"[36m<div>[39m
  [36m<div[39m
    [33mclass[39m=[32m\\"sc-AxjAm jCJLXK\\"[39m
    [33mid[39m=[32m\\"_ol_kit_map_test_id\\"[39m
  [36m>[39m
    [36m<div[39m
      [33mclass[39m=[32m\\"ol-viewport\\"[39m
      [33mdata-view[39m=[32m\\"37\\"[39m
      [33mstyle[39m=[32m\\"position: relative; overflow: hidden; width: 100%; height: 100%;\\"[39m
    [36m>[39m
      [36m<canvas[39m
        [33mclass[39m=[32m\\"ol-unselectable\\"[39m
        [33mstyle[39m=[32m\\"width: 100%; height: 100%; display: none;\\"[39m
      [36m/>[39m
      [36m<div[39m
        [33mclass[39m=[32m\\"ol-overlaycontainer\\"[39m
      [36m/>[39m
      [36m<div[39m
        [33mclass[39m=[32m\\"ol-overlaycontainer-stopevent\\"[39m
      [36m/>[39m
    [36m</div>[39m
  [36m</div>[39m
  [36m<div[39m
    [33mclass[39m=[32m\\"sc-AxirZ icXBkU\\"[39m
  [36m>[39m
    [36m<div[39m
      [33mclass[39m=[32m\\"sc-AxiKw cCxGZL _ol_kit_basemapOption\\"[39m
    [36m>[39m
      [36m<div[39m
        [33mclass[39m=[32m\\"sc-AxhCb jbZdWE\\"[39m
      [36m/>[39m
      [36m<label[39m
        [33mclass[39m=[32m\\"sc-AxhUy drnGGb\\"[39m
      [36m>[39m
        [0mOpenStreetMap[0m
      [36m</label>[39m
    [36m</div>[39m
    [36m<div[39m
      [33mclass[39m=[32m\\"sc-AxiKw giVZre _ol_kit_basemapOption\\"[39m
    [36m>[39m
      [36m<div[39m
        [33mclass[39m=[32m\\"sc-AxhCb lhYASk\\"[39m
      [36m/>[39m
      [36m<label[39m
        [33mclass[39m=[32m\\"sc-AxhUy drnGGb\\"[39m
      [36m>[39m
        [0mStamen Terrain[0m
      [36m</label>[39m
    [36m</div>[39m
    [36m<div[39m
      [33mclass[39m=[32m\\"sc-AxiKw giVZre _ol_kit_basemapOption\\"[39m
    [36m>[39m
      [36m<div[39m
        [33mclass[39m=[32m\\"sc-AxhCb eXxcRz\\"[39m
      [36m/>[39m
      [36m<label[39m
        [33mclass[39m=[32m\\"sc-AxhUy drnGGb\\"[39m
      [36m>[39m
        [0mStamen Toner Dark[0m
      [36m</label>[39m
    [36m</div>[39m
    [36m<div[39m
      [33mclass[39m=[32m\\"sc-AxiKw giVZre _ol_kit_basemapOption\\"[39m
    [36m>[39m
      [36m<div[39m
        [33mclass[39m=[32m\\"sc-AxhCb fAaRGN\\"[39m
      [36m/>[39m
      [36m<label[39m
        [33mclass[39m=[32m\\"sc-AxhUy drnGGb\\"[39m
      [36m>[39m
        [0mStamen Toner Lite[0m
      [36m</label>[39m
    [36m</div>[39m
    [36m<div[39m
      [33mclass[39m=[32m\\"sc-AxiKw giVZre _ol_kit_basemapOption\\"[39m
    [36m>[39m
      [36m<div[39m
        [33mclass[39m=[32m\\"sc-AxhCb cSPPXx\\"[39m
      [36m/>[39m
      [36m<label[39m
        [33mclass[39m=[32m\\"sc-AxhUy drnGGb\\"[39m
      [36m>[39m
        [0mBlank White[0m
      [36m</label>[39m
    [36m</div>[39m
    [36m<div[39m
      [33mid[39m=[32m\\"1\\"[39m
    [36m>[39m
      [0mchild comp[0m
    [36m</div>[39m
    [36m<div[39m
      [33mid[39m=[32m\\"2\\"[39m
    [36m>[39m
      [0mchild comp[0m
    [36m</div>[39m
    [36m<div[39m
      [33mid[39m=[32m\\"3\\"[39m
    [36m>[39m
      [0mchild comp[0m
    [36m</div>[39m
  [36m</div>[39m
[36m</div>[39m"
`;
